# f1-stats

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.json  test_api.py
api/: dependencies.py  main.py  server.py
api/routers/: drivers.py  health.py  metrics.py
api/schemas/: responses.py
config/: config.yaml
config/api/: default.yaml
config/data/: default.yaml
config/model/: tcn.yaml
config/training/: default.yaml
data_ingestion/: data_quality_check.py  debug_fastf1.py  duckdb_persister.py  fastf1_loader.py  ingest_races.py  inspect_db.py  query_db.py  reset_db.py  test_single_race.py
feature_engineering/: build_features.py  feature_builder.py  inspect_features.py
metrics/computation/: dab.py  tme.py  tpi.py
metrics/inference/: model_loader.py  predictor.py
metrics/utils/: filtering.py  uncertainty.py
ml_dataset/: create_sequences.py  inspect_sequences.py  sequence_builder.py  stint_dataset.py  test_dataset.py
models/: pace_model.py  prediction_heads.py  tcn.py  test_model.py
src/f1stats/metrics/inference/: model_loader.py
training/: loss.py  test_trained_model.py  train.py  trainer.py
